--- a/src/routes/Artifact.css
+++ b/src/routes/Artifact.css
@@ -1,80 +1,93 @@
 .artifact-map {
     padding: 20px;
-}
-
-.add-button {
-    background-color: #28a745;
-    color: white;
-    border: none;
-    border-radius: 5%;
-    padding: 10px 15px;
-    cursor: pointer;
-    margin-bottom: 20px;
-    margin-left: 93%;
-}
-
-.artifact-table {
+    }
+    
+    .add-button {
+        background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);    border: none;
+        border-radius: 50px;
+        padding: 10px 15px;
+        cursor: pointer;
+        margin-bottom: 20px;
+        margin-left: 93%;
+    }
+    
+    .add-button:hover {
+        transform: scale(1.2);
+    }
+    
+    .artifact-table {
     width: 80%;
     border-collapse: collapse;
-}
-
-.artifact-table th, .artifact-table td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: left;
-    height: 37px;
-}
-
-.artifact-table th {
-    background-color: #f2f2f2;
-}
-
-.info-icon, .edit-icon, .delete-icon {
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.33);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    
+    }
+    
+    .artifact-table th, .artifact-table td {
+        border: 1px solid rgba( 255, 255, 255, 0.18 );;
+    
+        padding: 8px;
+        text-align: left;
+        height: 37px;
+    
+    }
+    
+    /* .artifact-table th {
+        border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );;
+    } */
+    
+    .info-icon, .edit-icon, .delete-icon {
     cursor: pointer;
     margin: 10px;
-}
-
-.pagination-container {
+    }
+    
+    .pagination-container {
     margin-top: 20px;
     text-align: center;
-}
-
-.pagination {
+    }
+    
+    .pagination {
     display: inline-block;
-}
-
-.first-last {
+    }
+    
+    .first-last {
     cursor: pointer;
     margin: 0 5px;
-}
-
-/* .active {
-background-color: #28a745;
-color: white;
-padding: 5px 10px;
-} */
-
-.artifact-table {
+    }
+    
+    .active {
+        background: rgba(134, 167, 137, 0.63);
+        box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+        backdrop-filter: blur(6.7px);
+        -webkit-backdrop-filter: blur(6.7px);    
+        color: white;
+        padding: 5px 10px;
+    }
+    
+    .artifact-table {
     width: 100%;
     border-collapse: collapse;
-}
-
-.image-column,
-.artifact-column,
-.action-column {
+    }
+    
+    .image-column,
+    .artifact-column,
+    .action-column {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
-}
-
-.image-column {
+    }
+    
+    .image-column {
     width: 15%;
-}
-
-.artifact-column {
+    }
+    
+    .artifact-column {
     width: 76%;
-}
-
-.action-column {
+    }
+    
+    .action-column {
     width: 3%;
-}
+    } 
+    
