--- a/src/routes/addMystery.css
+++ b/src/routes/addMystery.css
@@ -2,29 +2,37 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.add-fact {
+.add-Fact {
     display: flex;
     flex-direction: column;
     width: 100%;
     max-width: 500px;
     margin: 0 auto;
+    
 }
 
-.add-fact input {
+.add-Fact input {
+    border: none;
+    border-radius: 20px;
     margin-bottom: 10px;
     padding: 8px;
     font-size: 16px;
+    background: rgba(134, 167, 137, 0.63);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.7px);
+    -webkit-backdrop-filter: blur(6.7px);    
 }
 
-.add-fact button {
+.add-Fact button {
     padding: 8px;
     font-size: 16px;
     background-color: #A6CF98;
     color: white;
     border: none;
     cursor: pointer;
+    border-radius: 20px;
 }
 
-.add-fact button:hover {
+.add-Fact button:hover {
     background-color: #557C55;
 }
