--- a/src/routes/Question.css
+++ b/src/routes/Question.css
@@ -1,9 +1,10 @@
 .questions-map {
-padding: 20px;
+    padding: 20px;
 }
 
 .add-button {
-    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);    border: none;
+    background-image: linear-gradient(to right, #43e97b 0%, #38f9d7 100%);
+    border: none;
     border-radius: 50px;
     padding: 10px 15px;
     cursor: pointer;
@@ -16,17 +17,19 @@ padding: 20px;
 }
 
 .questions-table {
-width: 80%;
-border-collapse: collapse;
-/* From https://css.glass */
-background: rgba(255, 255, 255, 0.33);
-border-radius: 16px;
-box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    width: 80%;
+    border-collapse: collapse;
+    /* From https://css.glass */
+    background: rgba(255, 255, 255, 0.33);
+    border-radius: 16px;
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
 
 }
 
-.questions-table th, .questions-table td {
-    border: 1px solid rgba( 255, 255, 255, 0.18 );;
+.questions-table th,
+.questions-table td {
+    border: 1px solid rgba(255, 255, 255, 0.18);
+    ;
 
     padding: 8px;
     text-align: left;
@@ -38,58 +41,60 @@ box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );;
 } */
 
-.info-icon, .edit-icon, .delete-icon {
-cursor: pointer;
-margin: 10px;
+.info-icon,
+.edit-icon,
+.delete-icon {
+    cursor: pointer;
+    margin: 10px;
 }
 
 .pagination-container {
-margin-top: 20px;
-text-align: center;
+    margin-top: 20px;
+    text-align: center;
 }
 
 .pagination {
-display: inline-block;
+    display: inline-block;
 }
 
 .first-last {
-cursor: pointer;
-margin: 0 5px;
+    cursor: pointer;
+    margin: 0 5px;
 }
 
 .active {
     background: rgba(134, 167, 137, 0.63);
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(6.7px);
-    -webkit-backdrop-filter: blur(6.7px);    
+    -webkit-backdrop-filter: blur(6.7px);
     color: white;
     padding: 5px 10px;
 }
 
 .questions-table {
-width: 100%;
-border-collapse: collapse;
+    width: 100%;
+    border-collapse: collapse;
 }
 
 .image-column,
 .questions-column,
 .action-column {
-padding: 12px;
-text-align: left;
-border-bottom: 1px solid #ddd;
+    padding: 12px;
+    text-align: left;
+    border-bottom: 1px solid #ddd;
 }
 
 .image-column {
-width: 15%;
+    width: 15%;
 }
 
 .questions-column {
-width: 76%;
+    width: 76%;
 }
 
 .action-column {
-width: 3%;
-} 
+    width: 3%;
+}
 
 /* .question-container {
     display: flex;
