--- a/src/routes/login.css
+++ b/src/routes/login.css
@@ -1,33 +1,66 @@
-/* form.css */
+.login-container {
+    width: 50%;
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: rgba(134, 167, 137, 0.63);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.7px);
+    -webkit-backdrop-filter: blur(6.7px);
+    position: absolute;
+    top: 20%;
+    left: 25%;
+    right: 0;
+    bottom: 0;
+}
 
-form {
+.login-form {
+    width: 100%;
+    max-width: 500px;
     display: flex;
     flex-direction: column;
-    max-width: 300px;
-    margin: 0 auto;
-    }
-    
-    input {
-    margin-bottom: 1rem;
-    padding: 0.5rem;
+}
+
+.login-input {
+    margin-bottom: 10px;
+    padding: 10px;
+    font-size: 16px;
     border: 1px solid #ccc;
-    border-radius: 4px;
-    }
-    
-    button {
-    padding: 0.5rem;
+    border-radius: 5px;
+}
+
+.login-button {
+    padding: 10px;
+    font-size: 16px;
     color: white;
-    background-color: blue;
+    background: rgba(93, 195, 101, 0.63);
+    box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(6.7px);
+    -webkit-backdrop-filter: blur(6.7px);
     border: none;
-    border-radius: 4px;
+    border-radius: 5px;
     cursor: pointer;
-    }
-    
-    button:hover {
-    background-color: darkblue;
-    }
-    
-    p {
+}
+
+.input-group {
+    position: relative;
+}
+
+.password-input-container {
+    position: relative;
+}
+
+.input-group-append {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 10px;
+    cursor: pointer;
+}
+
+.error-message {
     color: red;
-    text-align: center;
-    }
+    font-size: 14px;
+    margin-top: 10px;
+}
