--- a/src/routes/addEvent.css
+++ b/src/routes/addEvent.css
@@ -2,7 +2,7 @@ body {
     font-family: Arial, sans-serif;
 }
 
-.add-Event {
+.add-event {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -11,7 +11,7 @@ body {
     
 }
 
-.add-Event input {
+.add-event input {
     border: none;
     border-radius: 20px;
     margin-bottom: 10px;
@@ -23,7 +23,7 @@ body {
     -webkit-backdrop-filter: blur(6.7px);    
 }
 
-.add-Event button {
+.add-event button {
     padding: 8px;
     font-size: 16px;
     background-color: #A6CF98;
@@ -33,6 +33,6 @@ body {
     border-radius: 20px;
 }
 
-.add-Event button:hover {
+.add-event button:hover {
     background-color: #557C55;
 }
