--- a/src/routes/Fact.css
+++ b/src/routes/Fact.css
@@ -1,4 +1,4 @@
-.questions-map {
+.facts-map {
     padding: 20px;
 }
 
@@ -16,7 +16,7 @@
     transform: scale(1.2);
 }
 
-.questions-table {
+.facts-table {
     width: 80%;
     border-collapse: collapse;
     /* From https://css.glass */
@@ -26,8 +26,8 @@
 
 }
 
-.questions-table th,
-.questions-table td {
+.facts-table th,
+.facts-table td {
     border: 1px solid rgba(255, 255, 255, 0.18);
     ;
 
@@ -37,7 +37,7 @@
 
 }
 
-/* .questions-table th {
+/* .facts-table th {
     border-bottom: 1px solid rgba( 255, 255, 255, 0.18 );;
 } */
 
@@ -71,48 +71,34 @@
     padding: 5px 10px;
 }
 
-.questions-table {
+.facts-table {
     width: 100%;
     border-collapse: collapse;
 }
 
-.image-column,
-.questions-column,
 .action-column {
     padding: 12px;
     text-align: left;
     border-bottom: 1px solid #ddd;
 }
 
-.image-column {
-    width: 15%;
+.content-column {
+    width: 30%;
 }
 
-.questions-column {
-    width: 12%;
+.type-column {
+    width: 30%;
 }
 
-.point-column {
-    width: 5%;
-}
-
-.correctAns-column {
-    width: 12%;
-}
-
-.answer-column {
-    width: 10%;
-}
-
-.des-column {
-    width: 41%;
+.oId-column {
+    width: 30%;
 }
 
 .action-column {
     width: 3%;
 }
 
-/* .question-container {
+/* .fact-container {
     display: flex;
     flex-direction: column;
     width: 100%;
@@ -122,7 +108,7 @@
     box-sizing: border-box;
 }
    
-.question-row {
+.fact-row {
     display: flex;
     justify-content: space-between;
     align-items: center;
