--- a/src/routes/Event.css
+++ b/src/routes/Event.css
@@ -23,7 +23,8 @@
     background: rgba(255, 255, 255, 0.33);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-
+    backdrop-filter: blur(10px);
+    z-index: 2;
 }
 
 .events-table th,
