--- a/src/routes/Mystery.css
+++ b/src/routes/Mystery.css
@@ -23,7 +23,8 @@
     background: rgba(255, 255, 255, 0.33);
     border-radius: 16px;
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
-
+    backdrop-filter: blur(10px);
+    z-index: 2;
 }
 
 .mystery-table th,
@@ -84,26 +85,26 @@
     border-bottom: 1px solid #ddd;
 }
 
-.image-column {
-    width: 12%;
+.mystery-column {
+    width: 10%;
 }
 
 .name-column {
-    width: 15%;
+    width: 12%;
 }
 .locationId-column {
-    width: 16%;
+    width: 9%;
 }
 .point-column {
     width: 6%;
 }
 
 .des-column {
-    width: 45%;
+    width: 47%;
 }
 
 .action-column {
-    width: 3%;
+    width: 2%;
 }
 
 /* .question-container {
