--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -9,9 +9,9 @@
 
 /* Navbar CSS */
 .foo-logo {
-    width: 250px;
-    height: auto;
-    margin-left: 78%;
+    height: 80px;
+    width: auto;
+    margin-left: 90%;
 }
 
 .navbar {
