--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url('../public/background2.jpg');
+    background-image: url('../public/background3.png');
     height: 100vh;
     background-position: center;
     background-size: cover;
