--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -28,7 +28,7 @@
   margin-left: 2rem;
   font-size: 2rem;
   background: none;
-  color: #86A789;
+  color: black;
 }
 
 .navbar-toggle, .nav-menu {
